==============
Change History
==============

2011/05/18 0.2.3
================

 - also dump routines for mysql

2011/05/11 0.2.2
================

 - try to run commands from the scripts dir (mysql 5.5)

2011/05/10 0.2.1
================

 - fixed the mysqld_path to work with newer mysql version

2011/01/07 0.2.0
================

 - fixed an UnboundLocalError in server layer

 - do not use shell option in server layer command and sanitize the
   command options.

 - reduced start/stop wait times in mysql layer

 - use modification times in layer sql script change checking
   additionally to the paths. this way the test dump is only used if
   the sql scripts have not been modified since the last test run.

 - stop sql servers when runscripts fails in layer setup because
   otherwise the server still runs after the testrunner exited.

 - allow to define a defaults file in mysql layer

 - fixed cassandra layer download url

 - removed dependency to ``zc.buildout`` which is now in an extra
   called ``cassandra`` because it is only needed for downloading
   cassandra.

 - removed dependency to ``zope.testing``

 - removed dependency to ``transaction``

 - do not pipe stderr in base server layer to prevent overflow because
   it never gets read

2010/10/22 0.1.2
================

 - look form mysqld in relative libexec dir in mysql layer

2010/10/22 0.1.1
================

 - allow setting the mysql_bin_dir in layer and server

2010/07/14 0.1.0
================

 - fix wait interval in isUp check in server layer

 - use hashlib instead of sha, to avoid deprecation warnings. Only
   works with python >= 2.5

2010/03/08 0.1.0a7
==================

 - made mysql layer aware to handle multiple instances of mysqld in parallel


2010/02/03 0.1.0a6
==================

 - added additional argument to set nginx configuration file. usefull if
   desired config is not located under given prefix


2009/12/09 0.1.0a5
==================
