@@ -1,0 +1,10 @@
+*~
+/bin/
+develop-eggs/
+*.egg-info/
+.installed.cfg
+*.pyc
+*.pyo
+/build/
+/parts/
+/dist/
