@@ -6,6 +6,8 @@ parts = test
         coverage
         coverage-test coverage-out-dir
         coverage-report coverage-report-dir
+        scripts
+        postgres
 
 [test]
 recipe = zc.recipe.testrunner
@@ -18,3 +20,10 @@ recipe = hexagonit.recipe.cmmi
 url = http://sysoev.ru/nginx/nginx-0.7.62.tar.gz
 extra_options = --with-debug
 
+[scripts]
+recipe = zc.recipe.egg:script
+eggs = lovely.testlayers [mysql, pgsql, cassandra]
+
+[postgres]
+recipe = hexagonit.recipe.cmmi
+url=http://ftp.at.postgresql.org/pub/postgresql/source/v8.4.7/postgresql-8.4.7.tar.gz
