@@ -1,0 +1,10 @@
+shared_buffers = 32MB
+max_connections = 100
+datestyle = 'iso, dmy'
+lc_messages = 'en_US.UTF-8'			# locale for system error message 
+lc_monetary = 'en_US'			# locale for monetary formatting
+lc_numeric = 'en_US'			# locale for number formatting
+lc_time = 'en_US'				# locale for time formatting
+silent_mode = on
+log_destination = 'stderr'
+logging_collector = on
